--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "primeicons": "^7.0.0",
     "primeng": "^18.0.0-rc.1",
     "rxjs": "~7.8.0",
+    "string-similarity-js": "^2.1.4",
     "tslib": "^2.3.0",
     "uuid": "^11.0.3",
     "zone.js": "~0.14.10"
